--- a/p2/ingress.yaml
+++ b/p2/ingress.yaml
@@ -1,13 +1,21 @@
+# -----------------------------------------------------------------------------
+# Ingress for Part 2
+# - Routes traffic based on the Host header
+# - app1.com → app1
+# - app2.com → app2
+# - any other host → app3 (default backend)
+# -----------------------------------------------------------------------------
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: webapps-ingress
+  name: main-ingress
   namespace: webapps
-  annotations:
-    kubernetes.io/ingress.class: traefik
 spec:
+  ingressClassName: traefik   # Use Traefik (default in K3s)
+
+  # Host-based routing
   rules:
-    - host: app1.192.168.56.110.nip.io
+    - host: app1.com
       http:
         paths:
           - path: /
@@ -17,7 +25,7 @@ spec:
                 name: app1
                 port:
                   number: 80
-    - host: app2.192.168.56.110.nip.io
+    - host: app2.com
       http:
         paths:
           - path: /
@@ -27,8 +35,9 @@ spec:
                 name: app2
                 port:
                   number: 80
-    - host: app3.192.168.56.110.nip.io
-      http:
+
+    # 👇 Catch-all rule: matches any Host not caught above → app3
+    - http:
         paths:
           - path: /
             pathType: Prefix
